[gd_scene load_steps=11 format=3 uid="uid://cu88af33byu3a"]

[ext_resource type="Script" path="res://scripts/data_manager.gd" id="1_84yyt"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_k6bqu"]
[ext_resource type="PackedScene" uid="uid://csby38faws1mf" path="res://scenes/eraserbot.tscn" id="2_hvwcs"]
[ext_resource type="Texture2D" uid="uid://dfdtbux6slmct" path="res://assets/background.png" id="2_tty7l"]
[ext_resource type="PackedScene" uid="uid://5aqimhe4epkc" path="res://scenes/data.tscn" id="3_tiuk5"]
[ext_resource type="Script" path="res://scripts/upgrade_manager.gd" id="4_kh1r3"]
[ext_resource type="FontFile" uid="uid://bsfi2hegw1npa" path="res://assets/SpaceMono-Bold.ttf" id="4_xlhqx"]
[ext_resource type="PackedScene" uid="uid://cobn4undmh1ci" path="res://scenes/upgrade.tscn" id="5_d5ues"]
[ext_resource type="LabelSettings" uid="uid://xghivu23iu3a" path="res://themes/labels.tres" id="9_7lyuh"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lndvx"]
lifetime_randomness = 1.0
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 150.0
gravity = Vector3(0, 0, 0)
damping_max = 100.0
scale_min = 10.0
scale_max = 20.0

[node name="Game" type="Node2D"]
script = ExtResource("1_k6bqu")
Eraserbot = ExtResource("2_hvwcs")

[node name="DataManager" type="Node2D" parent="."]
z_index = 1
position = Vector2(512, 384)
script = ExtResource("1_84yyt")
Data = ExtResource("3_tiuk5")

[node name="DataSearchingTimer" type="Timer" parent="DataManager"]

[node name="DataSearchingTimerLabel" type="Label" parent="DataManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_xlhqx")
theme_override_font_sizes/font_size = 40
text = "3"
horizontal_alignment = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="DataManager"]
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_lndvx")
lifetime = 0.5
one_shot = true
explosiveness = 0.25

[node name="UpgradeManager" type="Node2D" parent="."]
z_index = 1
position = Vector2(10, 100)
script = ExtResource("4_kh1r3")
Upgrade = ExtResource("5_d5ues")

[node name="Swarm" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 717.0
offset_top = 475.0
offset_right = 757.0
offset_bottom = 515.0

[node name="AvailablePower" type="Label" parent="Swarm"]
layout_mode = 0
offset_right = 255.0
offset_bottom = 24.0
text = "Available swarm power : 10"
label_settings = ExtResource("9_7lyuh")

[node name="EraserbotSpeed" type="Label" parent="Swarm"]
offset_left = 3.0
offset_top = 45.0
offset_right = 190.0
offset_bottom = 69.0
text = "Eraserbot speed : 0"
label_settings = ExtResource("9_7lyuh")

[node name="EraserBotDecrease" type="Button" parent="Swarm"]
layout_mode = 0
offset_left = 198.0
offset_top = 43.0
offset_right = 216.0
offset_bottom = 74.0
disabled = true
text = "-"

[node name="EraserBotIncrease" type="Button" parent="Swarm"]
layout_mode = 0
offset_left = 221.0
offset_top = 43.0
offset_right = 239.0
offset_bottom = 74.0
text = "+"

[node name="SelfReplicationSpeed" type="Label" parent="Swarm"]
offset_left = 5.0
offset_top = 82.0
offset_right = 260.0
offset_bottom = 106.0
text = "Self replication speed : 0"
label_settings = ExtResource("9_7lyuh")

[node name="SelfReplicationDecrease" type="Button" parent="Swarm"]
layout_mode = 0
offset_left = 263.0
offset_top = 80.0
offset_right = 281.0
offset_bottom = 111.0
disabled = true
text = "-"

[node name="SelfReplicationIncrease" type="Button" parent="Swarm"]
layout_mode = 0
offset_left = 286.0
offset_top = 81.0
offset_right = 304.0
offset_bottom = 112.0
text = "+"

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_tty7l")
centered = false

[node name="TotalDataErased" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 275.0
offset_bottom = 35.0
text = "Total data erased : 0 bytes"
label_settings = ExtResource("9_7lyuh")

[node name="PercentageOfDevicesInfected" type="Label" parent="."]
visible = false
offset_left = 10.0
offset_top = 50.0
offset_right = 373.0
offset_bottom = 74.0
text = "Percentage of devices infected : 0.000001%"
label_settings = ExtResource("9_7lyuh")

[node name="SelfReplicationTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="DataManager/DataSearchingTimer" to="DataManager" method="_on_data_searching_timer_timeout"]
[connection signal="pressed" from="Swarm/EraserBotDecrease" to="." method="_on_eraser_bot_decrease_pressed"]
[connection signal="pressed" from="Swarm/EraserBotIncrease" to="." method="_on_eraser_bot_increase_pressed"]
[connection signal="pressed" from="Swarm/SelfReplicationDecrease" to="." method="_on_self_replication_decrease_pressed"]
[connection signal="pressed" from="Swarm/SelfReplicationIncrease" to="." method="_on_self_replication_increase_pressed"]
[connection signal="timeout" from="SelfReplicationTimer" to="." method="_on_self_replication_timer_timeout"]
